Corregir nullPointer al fer un pingURL amb estadisticaUrl o estadisticaInfoUrl null